--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/LOGO/full3.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>Soteria — AI-Powered Code Security Platform</title>
+  <title>Soteria</title>
   <meta name="description"
     content="Soteria is an AI-powered code security platform that helps developers identify vulnerabilities, understand why they matter, and build secure habits — before bad ones start." />
   <meta name="keywords"
