chore: add OpenGraph social preview images for launch
- Added fullLOGO.png as public asset for OpenGraph and Twitter cards
- Injected og:image and twitter:image into index.html to enable rich link previews when SOTERIA is shared on social media

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,9 +20,16 @@
   <meta property="og:title" content="Soteria — Write Secure Code From Day One" />
   <meta property="og:description"
     content="AI-powered code security platform. Scan your code for vulnerabilities, get actionable insights, and learn secure coding practices." />
+  <meta property="og:image" content="https://trysoteria.live/og-image.png" />
   <meta property="og:site_name" content="Soteria" />
 
   <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://trysoteria.live" />
+  <meta name="twitter:title" content="Soteria — Write Secure Code From Day One" />
+  <meta name="twitter:description"
+    content="AI-powered code security platform. Scan your code for vulnerabilities, get actionable insights, and learn secure coding practices." />
+  <meta name="twitter:image" content="https://trysoteria.live/og-image.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Soteria — Write Secure Code From Day One" />
   <meta name="twitter:description" content="AI-powered code security platform. Scan your code for vulnerabilities." />
